ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/573_similar_name_longer_than_80_not_suggested.sol
contract test {
    fn f() public {
        int YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY = YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY;
    }
}
// ----
// DeclarationError 7576: (146-236): Undeclared identifier.
